--- a/App Store 卡片展开效果/html/App Store.html
+++ b/App Store 卡片展开效果/html/App Store.html
@@ -13,7 +13,7 @@
 	  <h2 class="theme">寂静的沙丘</h2>
 	  <div class="wrapper-content">
 	    <div class="content">
-	      <p>沙丘，春秋战国时期赵国境内的古地名，在今天的河北省邢台市广宗境内，为秦始皇赵政（嬴政）第五次东巡驾崩的地方，也是赵武灵王赵雍沙丘之乱被幽禁皇宫驾崩的地方。史书上的“沙丘之谋”与“沙丘之乱”就发生在这里沙丘，春秋战国时期赵国境内的古地名，在今天的河北省邢台市广宗境内，为秦始皇赵政（嬴政）第五次东巡驾崩的地方，也是赵武灵王赵雍沙丘之乱被幽禁皇宫驾崩的地方。史书上的“沙丘之谋”与“沙丘之乱”就发生在这里。</p>
+	      <p>沙丘，春秋战国时期赵国境内的古地名，在今天的河北省邢台市广宗境内，为秦始皇赵政（嬴政）第五次东巡驾崩的地方，也是赵武灵王赵雍沙丘之乱被幽禁皇宫驾崩的地方。史书上的“沙丘之谋”与“沙丘之乱”就发生在这里沙丘，春秋战国时期赵国境内的古地名，在今天的河北省邢台市广宗境内，为秦始皇赵政（嬴政）第五次东巡驾崩的地方，也是赵武灵王赵雍沙丘之乱被幽禁皇宫驾崩的地方。史书上的“沙丘之谋”与“沙丘之乱”就发生在这里。 沙丘，春秋战国时期赵国境内的古地名，在今天的河北省邢台市广宗境内，为秦始皇赵政（嬴政）第五次东巡驾崩的地方，也是赵武灵王赵雍沙丘之乱被幽禁皇宫驾崩的地方。史书上的“沙丘之谋”与“沙丘之乱”就发生在这里沙丘，春秋战国时期赵国境内的古地名，在今天的河北省邢台市广宗境内，为秦始皇赵政（嬴政）第五次东巡驾崩的地方，也是赵武灵王赵雍沙丘之乱被幽禁皇宫驾崩的地方。史书上的“沙丘之谋”与“沙丘之乱”就发生在这里</p>
 		  <p>古地名，在今天的河北省邢台市广宗县大平台村。《史记》载，商纣王在沙丘大兴土木，增建苑台，放置了各种鸟兽，还设酒池肉林，使男女裸体追逐游戏，狂歌滥饮，通宵达旦。其荒淫奢侈程度骇人听闻。战国时期，沙丘为赵国属地，赵王又在这里设离官。沙丘宫这座昔日赵国国王的行宫，在不到90年的时间里见证了“一代英主”赵武灵王赵雍和“千古一帝”秦始皇赵政（嬴政）这两位战国时代最伟大帝王的生命终结。</p>
 	    </div>
 	  </div>
@@ -24,7 +24,7 @@
 	  <div class="wrapper-content">
 	    <div class="content">
 	      <p>金丝雀又名芙蓉鸟、芙蓉、白玉、白玉鸟、玉鸟、白燕，是雀目科食谷类鸟。原产非洲西北海岸的加纳利、马狄拿、爱苏利兹等岛屿，是羽色和鸣叫兼优的笼养观赏鸟。有24个品种，在国内外皆被列为高贵笼养观赏鸟之一。我国虽然自19世纪40年代起就从外国引进，但并未注意品种品系的保持，目前纯种的不多。</p>
-		  <p>经人工饲养出现了黄色、白色、灰色、绿色、橘红色、古铜色、桂皮色、花色等羽色。其体型和姿态也发生了很大的变化，经人工培育出现了不同的品系。近年来培育出的直立型、大弯月型、直立鹰型尤为珍贵</p>
+		  <p>经人工饲养出现了黄色、白色、灰色、绿色、橘红色、古铜色、桂皮色、花色等羽色。其体型和姿态也发生了很大的变化，经人工培育出现了不同的品系。近年来培育出的直立型、大弯月型、直立鹰型尤为珍贵 经人工饲养出现了黄色、白色、灰色、绿色、橘红色、古铜色、桂皮色、花色等羽色。其体型和姿态也发生了很大的变化，经人工培育出现了不同的品系。近年来培育出的直立型、大弯月型、直立鹰型尤为珍贵经人工饲养出现了黄色、白色、灰色、绿色、橘红色、古铜色、桂皮色、花色等羽色。其体型和姿态也发生了很大的变化，经人工培育出现了不同的品系。近年来培育出的直立型、大弯月型、直立鹰型尤为珍贵经人工饲养出现了黄色、白色、灰色、绿色、橘红色、古铜色、桂皮色、花色等羽色。其体型和姿态也发生了很大的变化，经人工培育出现了不同的品系。近年来培育出的直立型、大弯月型、直立鹰型尤为珍贵</p>
 	    </div>
 	  </div>
 	</div>
@@ -34,7 +34,7 @@
 		<div class="wrapper-content">
 		  <div class="content">
 			<p>林，包括乔木林、竹林和国家特别规定灌木林地。按用途可以分为防护林、特种用途林、用材林、经济林和能源林（原薪炭林）。 以木本植物为主体的生物群落，是集中的乔木与其它植物、动物、微生物和土壤之间相互依存相互制约，并与环境相互影响，从而形成的一个生态系统的总体。它具有丰富的物种，复杂的结构，多种多样的功能。森林被誉为“地球之肺”。</p>
-			<p>森林指的是由乔木、直径1.5cm以上的竹子组成且郁闭度0.20以上，以及符合森林经营目的的灌木组成且覆盖度30%以上的植物群落。包括郁闭度0.20以上的乔木林、竹林、和红树林，国家特别规定的灌木林、农田林网以及村旁、路旁、水旁、宅旁、林木等。</p>
+			<p>森林指的是由乔木、直径1.5cm以上的竹子组成且郁闭度0.20以上，以及符合森林经营目的的灌木组成且覆盖度30%以上的植物群落。包括郁闭度0.20以上的乔木林、竹林、和红树林，国家特别规定的灌木林、农田林网以及村旁、路旁、水旁、宅旁、林木等。 森林指的是由乔木、直径1.5cm以上的竹子组成且郁闭度0.20以上，以及符合森林经营目的的灌木组成且覆盖度30%以上的植物群落。包括郁闭度0.20以上的乔木林、竹林、和红树林，国家特别规定的灌木林、农田林网以及村旁、路旁、水旁、宅旁、林木等。森林指的是由乔木、直径1.5cm以上的竹子组成且郁闭度0.20以上，以及符合森林经营目的的灌木组成且覆盖度30%以上的植物群落。包括郁闭度0.20以上的乔木林、竹林、和红树林，国家特别规定的灌木林、农田林网以及村旁、路旁、水旁、宅旁、林木等。</p>
 		  </div>
 		</div>
 	  </div>
